// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: aaa.error.txt: 0e36b7aaa66fbd8dd6d8cb74d23b12e7 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
aaa error

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
THROWN EXCEPTION:

Error: correctly failed
`;

exports[`matches expected output: aaa.txt: 0c3085de02c3066d7de61f02619755c9 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
aaa

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
AAA

`;

exports[`matches expected output: aaa.txt: 192f24c0409592a919d79b6e5f4b1b0f 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
aaa

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
AAA

`;

exports[`matches expected output: aaa.txt: custom snapshot name (no modifications) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
aaa

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
aaa

`;

exports[`matches expected output: aaa.txt: d53b86044151463c2175e421c25b2af0 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
aaa

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "payload": "\\"aaa\\\\n\\"",
  "p": {
    "r": {
      "e": {
        "t": {
          "t": {
            "y": true
          }
        }
      }
    }
  }
}
`;

exports[`matches expected output: bbb.txt: 0c3085de02c3066d7de61f02619755c9 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
bbb

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
BBB

`;

exports[`matches expected output: bbb.txt: 192f24c0409592a919d79b6e5f4b1b0f 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
bbb

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
BBB

`;

exports[`matches expected output: bbb.txt: custom snapshot name (no modifications) 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
bbb

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
bbb

`;

exports[`matches expected output: bbb.txt: d53b86044151463c2175e421c25b2af0 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
bbb

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "payload": "\\"bbb\\\\n\\"",
  "p": {
    "r": {
      "e": {
        "t": {
          "t": {
            "y": true
          }
        }
      }
    }
  }
}
`;
